--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,18 @@ volumes:
   pgdata:
 
 services:
+  frontend:
+    container_name: react
+    build:
+      context: ./frontend/
+      dockerfile: Dockerfile
+    command: npm start
+    volumes:
+      - ./frontend:/var/www
+    ports:
+      - 3000:3000
+    depends_on:
+      - webapp
   webapp:
     container_name: django
     build:
@@ -31,4 +43,15 @@ services:
       - ./postgres/pgdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
+  server:
+    container_name: nginx
+    image: nginx:latest
+    ports:
+      - 80:80
+    volumes:
+      - ./frontend/build:/frontend/media
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - webapp
+      - frontend
 
