--- a/default.conf
+++ b/default.conf
@@ -1,27 +1,20 @@
 server {
-    listen 80;
-    server_name localhost;
-
-    root /web/frontend;
-    access_log /var/log/nginx/frontend.log;
-
-    location / {
-    }
-}
-
-server {
     listen 8000;
     server_name localhost;
-    access_log /var/log/nginx/api.log;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
     location /static {
         autoindex off;
-        alias /web/static_files;
+        alias /src/static_files;
     }
 
-    location / {
-        proxy_pass http://webapp:8000;
-        proxy_set_header Host $host;
+    location /api {
+        proxy_pass http://webapp:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect default;
     }
+
 }
