--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,8 @@ services:
     build:
       context: ./frontend/
       dockerfile: Dockerfile-prod
+      args:
+        - REACT_APP_API_URL=http://localhost:8000/api/publications/
     volumes:
       - './frontend:/usr/src/app'
       - '/usr/src/app/node_modules'
