--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,6 @@ services:
     volumes:
       - './frontend:/usr/src/app'
       - '/usr/src/app/node_modules'
-      - ./web/static_files:/src/static_files
     environment:
       - NODE_ENV=production
     depends_on:
@@ -51,7 +50,7 @@ services:
     ports:
       - 5432:5432
   server:
-    container_name: server
+    container_name: nginx
     image: nginx:latest
     ports:
       - 8000:8000
