--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,5 @@
 server {
-    listen 8000;
-    server_name localhost;
+    listen 8000 default_server;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
