--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -13,6 +13,6 @@ RUN npm run build
 
 # production environment
 FROM nginx:1.15-alpine
-COPY --from=builder /src/build/ /usr/share/nginx/html
+COPY --from=builder /src/build /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
