--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -12,7 +12,7 @@ COPY . /src
 RUN npm run build
 
 # Production environment
-FROM nginx:1.15-alpine
+FROM nginx:latest
 EXPOSE 80
 COPY --from=builder /src/build /usr/share/nginx/html/
 CMD ["nginx", "-g", "daemon off;"]
