add command to migrate db

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -12,5 +12,7 @@ COPY Pipfile Pipfile
 COPY Pipfile.lock Pipfile.lock
 RUN pipenv install --deploy --system
 
+### Migrate database
+RUN python manage.py migrate
 ### Collect static files for serving to Django
 RUN python manage.py collectstatic --noinput
