--- a/default.conf
+++ b/default.conf
@@ -10,10 +10,9 @@ server {
     }
 
     location /api {
-        proxy_pass http://webapp:8080;
+        proxy_pass http://backend:8080;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect default;
     }
-
 }
