--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,23 +9,23 @@ volumes:
 
 services:
   frontend:
-    container_name: react
+    container_name: frontend
     build:
       context: ./frontend/
       dockerfile: Dockerfile-prod
       args:
-        - REACT_APP_API_URL=http://localhost:8000/api/publications/
+        - REACT_APP_API_URL=http://localhost:8080/api/publications/
     volumes:
       - './frontend:/usr/src/app'
       - '/usr/src/app/node_modules'
     environment:
       - NODE_ENV=production
     depends_on:
-      - webapp
+      - backend
     ports:
       - 80:80
-  webapp:
-    container_name: webapp
+  backend:
+    container_name: backend
     build:
       context: ./web/
       dockerfile: Dockerfile
@@ -42,7 +42,7 @@ services:
       - db
   db:
     image: postgres:10
-    container_name: postgres
+    container_name: db
     env_file:
       - ./postgres/db.env
     volumes:
@@ -58,5 +58,5 @@ services:
       - ./web/static_files:/src/static_files
       - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - webapp
+      - backend
       - frontend
