--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -13,6 +13,7 @@ RUN npm run build
 
 # Production environment
 FROM nginx:latest
+RUN apt-get update && apt-get install nano -y
 EXPOSE 80
 COPY --from=builder /src/build /usr/share/nginx/html/
 CMD ["nginx", "-g", "daemon off;"]
