--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,14 @@ __pycache__/*
 local_settings.py
 db.sqlite3
 media
+backend/static_files/
+
+#DB
 postgres/pgdata
-frontend/build/
+
+# React
 node_modules/
-web/static_files/
+frontend/build/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
