--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,25 +13,26 @@ services:
     build:
       context: ./frontend/
       dockerfile: Dockerfile-prod
-      args:
-        - REACT_APP_API_URL=http://localhost:8080/api/publications/
     volumes:
-      - './frontend:/usr/src/app'
-      - '/usr/src/app/node_modules'
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
+      - ./backend/static_files:/src/static_files
+      - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
     environment:
       - NODE_ENV=production
     depends_on:
       - backend
     ports:
       - 80:80
+      - 8000:8000
   backend:
     container_name: backend
     build:
-      context: ./web/
+      context: ./backend/
       dockerfile: Dockerfile
     command: gunicorn -w 4 api.wsgi:application -b 0.0.0.0:8080
     volumes:
-      - ./web/static_files:/src/static_files
+      - ./backend/static_files:/src/static_files
     ports:
       - 8080:8080
     environment:
@@ -41,22 +42,11 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:10
     container_name: db
+    image: postgres:10
     env_file:
       - ./postgres/db.env
     volumes:
       - ./postgres/pgdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
-  server:
-    container_name: nginx
-    image: nginx:latest
-    ports:
-      - 8000:8000
-    volumes:
-      - ./web/static_files:/src/static_files
-      - ./default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - backend
-      - frontend
