check node_env in app

--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -10,7 +10,7 @@ RUN npm run build
 
 # Production environment
 FROM nginx:latest
-RUN apt-get update && apt-get install nano -y
+RUN apt-get update && apt-get install nano tree -y
 EXPOSE 80
 COPY --from=builder /src/build /usr/share/nginx/html/
 CMD ["nginx", "-g", "daemon off;"]
