in backend container, install nginx mount static files in backend rearrange ports forward traffic to :80/api

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,9 @@ COPY Pipfile Pipfile
 COPY Pipfile.lock Pipfile.lock
 RUN pipenv install --deploy --system
 
+### Static files server
+RUN apt-get update && apt-get install nginx nano tree -y
+
 ### Migrate database
 RUN python manage.py migrate
 ### Collect static files for serving to Django
