--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,15 +16,14 @@ services:
     volumes:
       - ./frontend:/usr/src/app
       - /usr/src/app/node_modules
-      - ./backend/static_files:/src/static_files
       - ./frontend/default.conf:/etc/nginx/conf.d/default.conf
     environment:
       - NODE_ENV=production
+      - REACT_APP_API_URL=http://localhost:8000/api/publications/
     depends_on:
       - backend
     ports:
       - 80:80
-      - 8000:8000
   backend:
     container_name: backend
     build:
@@ -33,8 +32,10 @@ services:
     command: gunicorn -w 4 api.wsgi:application -b 0.0.0.0:8080
     volumes:
       - ./backend/static_files:/src/static_files
+      - ./backend/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 8080:8080
+      - 8000:8000
     environment:
       DJANGO_SETTINGS_MODULE: api.settings-prod
     env_file:
