--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -7,6 +7,13 @@ server {
         index  index.html index.htm;
     }
 
+    location /api {
+        proxy_pass http://backend:8000;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect default;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
@@ -14,24 +21,5 @@ server {
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
-}
-
-server {
-    listen 8000;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location / {
-        proxy_pass http://backend:8080;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect default;
-    }
-
-    location /static {
-        autoindex off;
-        alias /src/static_files;
-    }
 
 }
