--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -1,15 +1,28 @@
 # Build environment
+###################
 FROM node:10.12.0-alpine AS builder
+
+# Create and set working directory
 RUN mkdir /src
 WORKDIR /src
+
+# Add `/usr/src/app/node_modules/.bin` to $PATH
 ENV PATH /src/node_modules/.bin:$PATH
+
+# Environment variable - API URL
 ENV REACT_APP_API_URL http://localhost:8000/api/publications/
+
+# Install and cache app dependencies
 COPY package.json /src/package.json
 RUN npm install
+# Copy in source files
 COPY . /src
+
+# Build app
 RUN npm run build
 
 # Production environment
+########################
 FROM nginx:latest
 RUN apt-get update && apt-get install nano tree -y
 EXPOSE 80
